# bevy-voxel

./: .gitignore  Cargo.toml  README.md  bevy.rdc.REMOVED.git-id  callgrind.out  dhat-heap.json  heaptrack.world.619287.zst  heaptrack.world.623871.zst  heaptrack.world.627160.zst  perf.data.REMOVED.git-id  perf.data.old  renderdoc perf.csv
assets/shaders/: compile.py  passthrough-compiled.wgsl  passthrough.wgsl  raytrace-compiled.wgsl  raytrace.wgsl  utils.wgsl
engine/: Bevy.REMOVED.git-id  Bevy.exe.REMOVED.git-id  README.md  capture.tracy.REMOVED.git-id
engine/assets/shaders/: beam-compiled.wgsl  beam.wgsl  passthrough-compiled.wgsl  passthrough.wgsl  raytrace-compiled.wgsl  raytrace.wesl  raytrace.wgsl  raytrace_common.wgsl  utils.wgsl
engine/assets/world/: Church_Of_St_Sophia.vox.REMOVED.git-id  castle.vox.REMOVED.git-id  nuke.vox.REMOVED.git-id
engine/src/: camera.rs  compute.rs  main.rs  material.rs
src/: build.rs  camera.rs  compute.rs  main.rs  material.rs  world.rs
world/: Cargo.toml
world/benches/: main.rs
world/src/: chunks.rs  common.rs  generation.rs  lib.rs  main.rs  parser.rs
world/tests/: gen_world.rs
