[package]
name = "Bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }
image = "0.25.6"
iyes_perf_ui = "0.5.0"
noise = { version = "0.9.0", features = ["std"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
debug = true
